<resources>
    <string name="app_name">Wallet29</string>
    <string name="action_accounts">Cuentas</string>
    <string name="action_transactions">Transacciones</string>
    <string name="action_savings">Ahorros</string>
    <string name="action_summary">Resumen</string>
    <string name="title_activity_ffff">ffffActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="menu_categories">Categorías</string>
    <string name="menu_configurations">Configuraciones</string>
    <string name="menu_rate_us">Califícanos</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_debts">Deudas</string>
    <string name="sign_in">Iniciar sesión</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Close">drawer close</string>
    <string name="Open">drawer open</string>

    <!-- Login -->
    <string name="sign_up_label">Regístrate</string>
    <string name="log_in_label">Iniciar sesión</string>

    <string name="sign_up_or_label"> Regístrate </string>
    <string name="log_in_or_label"> Inicia sesión </string>

    <string name="password_hint">Contraseña</string>
    <string name="email_hint">Correo</string>
    <string name="confirm_hint">Confirmar Contraseña</string>

    <string name="or"> Ó </string>
    <string name="forgot_pwd">¿Olvidaste la contraseña?</string>
    <string name="edt_name_hint">Nombre</string>
    <string name="title_add_account">Cuenta</string>
    <string name="hint_balance">Saldo</string>
    <string name="hint_description">Descripción</string>
    <string name="btn_save">Guardar</string>

    <!-- Account Wallet Type -->
    <string name="text_cash">Efectivo</string>
    <string name="text_credit_card">Tarjeta de crédito</string>
    <string name="action_save">guardar</string>
    <string name="text_description_none">Ninguna</string>
    <string name="input_lenght_error">Este campo no puede estar vacío</string>
    <string name="toast_add_account_wallet">Se Agregó Su Cuenta</string>
    <string name="dialog_color_picker_title">Elije un color</string>
    <string name="alert_dialog_dismiss_with_changes">¿Descartar cambios?</string>
    <string name="dialog_neg_btn_discard">Descartar</string>
    <string name="dialog_title_discard_changes">Descartar cambios</string>

    <!-- BottomSheetTransaction -->
    <string name="calculator_btn_delete">Borrar</string>
    <string name="transaction_type_insert">Ingreso</string>
    <string name="transaction_type_withdraw">Retiro</string>
    <string name="transaction_type_transfer">Transferencia</string>
    <string name="toast_update_account_wallet">Se actualizó su cuenta</string>
    <string name="spinner_accounts_all">Todas las cuentas</string>
    <string name="category_transport">Transporte</string>
    <string name="category_family">Familia</string>
    <string name="category_vehicle">Vehículo</string>
    <string name="category_shop">Compras</string>
    <string name="title_add_category">Categoría</string>
    <string name="toast_add_category">Categoría agregada</string>
    <string name="toast_update_category">Se actualizó la categoría</string>


</resources>
