<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/navigation_categories"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_categories" />

        <item
            android:id="@+id/navigation_debts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_debts" />

        <item
            android:id="@+id/navigation_configurations"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_configurations" />
    </group>

    <item android:title="Otros">
        <menu android:checkableBehavior="single">

            <item
                android:id="@+id/navigation_rate_us"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/menu_rate_us" />

            <item
                android:id="@+id/navigation_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
