<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/include"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/add_element_dialog_header" />

    <TextView
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/login_margin_start"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_width="match_parent"
        android:text="@string/title_add_account"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:translationY="-12dp"
        app:layout_constraintTop_toBottomOf="@id/include" />

    <TextView
        android:id="@+id/radioLabel"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginTop="@dimen/login_margin_top"
        android:layout_width="match_parent"
        android:text="Seleccione el tipo de cuenta: "
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/login_margin_start"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/radioLabel">

        <RadioButton
            android:checked="true"
            android:id="@+id/radioButtonCash"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/text_cash" />

        <RadioButton
            android:id="@+id/radioCreditCard"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/text_credit_card" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtBalance"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/login_margin_start"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginTop="@dimen/login_margin_top"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupType">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/hint_balance"
            android:inputType="numberDecimal"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtDescription"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/login_margin_start"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginTop="@dimen/login_margin_top"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/edtBalance">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:maxLines="3"
            android:text="@string/text_description_none" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
