<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginEnd="@dimen/login_margin_end"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:text="@string/log_in_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_left"
        android:gravity="center"
        android:padding="@dimen/switcher_padding"
        android:paddingEnd="@dimen/extra_right_padding"
        android:text="Ó REGÍSTRATE"
        android:textAllCaps="true"
        android:textColor="#fafafa"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationX="@dimen/extra_translation_x_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <ImageView
        android:id="@+id/imgFacebook"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:layout_marginStart="@dimen/option_margin"
        android:layout_marginLeft="@dimen/option_margin"
        android:layout_marginEnd="@dimen/option_margin"
        android:layout_marginRight="@dimen/option_margin"
        android:src="@drawable/facebook"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/controller"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/second"
        app:layout_constraintTop_toTopOf="@id/controller" />

    <ImageView
        android:id="@+id/second"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:layout_marginEnd="@dimen/option_margin"
        android:src="@drawable/linkedin"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/imgFacebook"
        app:layout_constraintLeft_toRightOf="@id/imgFacebook"
        app:layout_constraintRight_toLeftOf="@id/last"
        app:layout_constraintTop_toTopOf="@id/imgFacebook"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/last"
        android:layout_width="@dimen/option_size"
        android:layout_height="@dimen/option_size"
        android:src="@drawable/twitter"
        android:tint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/second"
        app:layout_constraintLeft_toRightOf="@id/second"
        app:layout_constraintRight_toLeftOf="@id/controller"
        app:layout_constraintTop_toTopOf="@id/second"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <TextView
        android:id="@+id/focus_hider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="INICIA SESIÓN"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="@dimen/login_margin_end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/focus_hider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_margin_start"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/login_margin_end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/forgot_pwd"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>